added new icon, dropdowns, textfields, length by size and tread width by tread type, save button, one more, hint, and a lot more

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -13,5 +13,15 @@
 
   "interlayer" : "Interlayer",
   "green" : "Green",
-  "white" : "White"
+  "white" : "White",
+
+  "warehouse" : "Warehouse",
+  "newTread" : "New Tread",
+  "treadDefect" : "Tread Defect",
+
+  "oneMore" : "One more",
+  "tireSizeLength": "Tire Size Length",
+
+  "hint" : "Hint",
+  "hintAboutSameWheels" : "Same wheels are wheels with same size, original tread type, width and client"
 }
