--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -13,5 +13,16 @@
 
   "interlayer" : "Прослойка",
   "green" : "Зеленая",
-  "white" : "Белая"
+  "white" : "Белая",
+
+  "warehouse" : "Склад",
+  "newTread" : "Новая лента",
+  "treadDefect" : "Лента из брака",
+
+  "oneMore" : "Еще одно",
+
+  "tireSizeLength" : "Длина колеса",
+
+  "hint" : "Подсказка",
+  "hintAboutSameWheels" : "Колеса одинаковы если у них одинаковый размер, оригинальный тип и ширина протектора и клиент"
 }
