--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -24,5 +24,6 @@
   "tireSizeLength" : "Длина колеса",
 
   "hint" : "Подсказка",
-  "hintAboutSameWheels" : "Колеса одинаковы если у них одинаковый размер, оригинальный тип и ширина протектора и клиент"
+  "hintAboutSameWheels" : "Колеса одинаковы если у них одинаковый размер, оригинальный тип и ширина протектора и клиент",
+  "sameWheelsInARow" : "Одинаковых колес подряд"
 }
