--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -25,5 +25,9 @@
 
   "hint" : "Подсказка",
   "hintAboutSameWheels" : "Колеса одинаковы если у них одинаковый размер, оригинальный тип и ширина протектора и клиент",
-  "sameWheelsInARow" : "Одинаковых колес подряд"
+  "sameWheelsInARow" : "Одинаковых колес подряд",
+
+  "treadDate" : "Дата протектора",
+  "mixtureNumber" : "Номер смеси",
+  "hardness" : "Твердость"
 }
